fixed scrollbar.
git-svn-id: http://vreportetl01t.corp.hds.com/svnrepo/HDS.com-Revamp/hdscorp@1966 b06f84e9-1d16-493f-8c0d-41b76f67d7c8

--- a/content/src/main/content/jcr_root/etc/clientlibs/hdscorp/main/css/contact-us-locations.css
+++ b/content/src/main/content/jcr_root/etc/clientlibs/hdscorp/main/css/contact-us-locations.css
@@ -103,7 +103,7 @@
   width: 100%;
   max-height: 800px;
   overflow-x: hidden;
-  overflow-y: scroll;
+  overflow-y: auto;
   
 }
 .side-block {
